--- a/output.css
+++ b/output.css
@@ -203,6 +203,9 @@
   .my-auto {
     margin-block: auto;
   }
+  .mt-\[25\%\] {
+    margin-top: 25%;
+  }
   .flex {
     display: flex;
   }
@@ -214,9 +217,6 @@
   }
   .w-full {
     width: 100%;
-  }
-  .w-screen {
-    width: 100vw;
   }
   .max-w-prose {
     max-width: 65ch;
@@ -232,9 +232,6 @@
   }
   .items-center {
     align-items: center;
-  }
-  .items-stretch {
-    align-items: stretch;
   }
   .justify-center {
     justify-content: center;
@@ -254,6 +251,9 @@
   }
   .self-center {
     align-self: center;
+  }
+  .justify-self-center {
+    justify-self: center;
   }
   .rounded-lg {
     border-radius: var(--radius-lg);
@@ -288,6 +288,12 @@
   }
   .p-4 {
     padding: calc(var(--spacing) * 4);
+  }
+  .p-8 {
+    padding: calc(var(--spacing) * 8);
+  }
+  .p-16 {
+    padding: calc(var(--spacing) * 16);
   }
   .text-center {
     text-align: center;
@@ -332,9 +338,9 @@
       display: grid;
     }
   }
-  .md\:h-screen {
+  .md\:h-full {
     @media (width >= 48rem) {
-      height: 100vh;
+      height: 100%;
     }
   }
   .md\:grid-cols-2 {
@@ -364,6 +370,9 @@ strong {
 }
 .highlight {
   background-color: var(--color-pink-500);
+}
+* {
+  box-sizing: border-box;
 }
 @property --tw-space-y-reverse {
   syntax: "*";
